--- a/src/app/shared/components/customer/components/customer-detail/customer-detail.component.html
+++ b/src/app/shared/components/customer/components/customer-detail/customer-detail.component.html
@@ -1,7 +1,9 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/admin/customers"></ion-back-button>
+      <ion-button (click)="goBack()">
+        <ion-icon slot="icon-only" name="arrow-back-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title>Detalle del Cliente</ion-title>
     <ion-buttons slot="end">
