--- a/src/app/shared/components/customer/components/customer-list/customer-list.component.html
+++ b/src/app/shared/components/customer/components/customer-list/customer-list.component.html
@@ -1,7 +1,9 @@
 <ion-header class="ion-no-border">
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="/admin/dashboard"></ion-back-button>
+            <ion-button (click)="goBack()">
+                <ion-icon slot="icon-only" name="arrow-back-outline"></ion-icon>
+            </ion-button>
         </ion-buttons>
         <ion-title>Gestión de Clientes</ion-title>
         <ion-buttons slot="end">
