feat: add provider management functionality with create, edit, and list components

--- a/src/app/pages/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -68,6 +68,10 @@
                     <ion-icon name="people-circle"></ion-icon>
                     <span>Clientes</span>
                 </a>
+                <a class="bank-glass-card bank-menu-item" (click)="navegation('/admin/providers')">
+                    <ion-icon name="business"></ion-icon>
+                    <span>Proveedores</span>
+                </a>
                 <a class="bank-glass-card bank-menu-item" routerLink="/admin/reports">
                     <ion-icon name="bar-chart"></ion-icon>
                     <span>Reportes</span>
